--- a/front/package.json
+++ b/front/package.json
@@ -11,12 +11,16 @@
     "axois": "0.0.1-security",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mdbreact": "^4.27.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "reactstrap": "^8.8.1",
     "request": "^2.88.2",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
