--- a/front/package.json
+++ b/front/package.json
@@ -66,6 +66,7 @@
     "react-icons": "^4.1.0",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
+    "react-table": "^7.7.0",
     "reactstrap": "^8.8.1",
     "request": "^2.88.2",
     "resolve": "1.18.1",
@@ -73,7 +74,7 @@
     "sass-loader": "8.0.2",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
